--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -20,6 +20,8 @@
   align-items: flex-start;
   flex-direction: column;
   justify-content: space-between;
+
+  background: url("../../images/landing.svg") no-repeat 75% center;
 }
 
 #page-landing .content-wrapper main {
@@ -52,8 +54,27 @@
   text-align: right;
 }
 
+.content-wrapper .location strong {
+  font-weight: 800;
+}
+
 .content-wrapper .enter-app {
   position: absolute;
   right: 0;
   bottom: 0;
+
+  width: 80px;
+  height: 80px;
+  background: #ffd666;
+  border-radius: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 0.2s;
+}
+
+.content-wrapper .enter-app:hover {
+  background: #96feff;
 }
